# konfig-okta-integration-agent

./: .env.example  .gitignore  Dockerfile  PLAN_APPROVAL_FEATURE.md  README.md  alembic.ini  docker-compose.yml  konfig_ui_patterns.json  pyproject.toml  requirements.txt  test_agent_swarm.py  test_enhanced_dom.py  test_error_context_system.py  test_integration_with_approval.py  test_plan_approval.py  test_salesforce_auth.py  test_screenshot.py  test_timeout_fix.py
alembic/: env.py  script.py.mako
konfig/: __init__.py  cli.py
konfig/api/: main.py
konfig/config/: settings.py
konfig/database/: connection.py  models.py
konfig/modules/cognition/: cognition_module.py
konfig/modules/memory/: memory_module.py
konfig/modules/perception/: perception_module.py
konfig/orchestrator/: agent.py  mvp_orchestrator.py  react_orchestrator.py
konfig/services/: action_cache.py  adaptive_intelligence.py  agent_swarm.py  error_context_collector.py  google_auth_service.py  intelligent_planner.py  intelligent_web_automation.py  llm_service.py  plan_approval.py  vendor_auth_service.py
konfig/tools/: okta_api_client.py  skyvern_dom_utils.js  web_interactor.py
konfig/utils/: logging.py  metrics.py  tracing.py
scripts/: init-db.sql
tests/: conftest.py
tests/integration/: test_end_to_end_flow.py
tests/unit/: test_memory_module.py  test_web_interactor.py
